Jar-in-Jar: Throw when only incompatible version ranges were specified